@@ -1,6 +1,6 @@
 begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
 begin_comment
-comment|/**  * Copyright 2010 The Apache Software Foundation  *  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
+comment|/**  * Copyright 2011 The Apache Software Foundation  *  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
 end_comment
 
 begin_package
@@ -51,6 +51,18 @@ begin_import
 import|import
 name|java
 operator|.
+name|lang
+operator|.
+name|reflect
+operator|.
+name|UndeclaredThrowableException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|net
 operator|.
 name|SocketTimeoutException
@@ -84,26 +96,6 @@ operator|.
 name|util
 operator|.
 name|List
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Map
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|TreeMap
 import|;
 end_import
 
@@ -634,7 +626,6 @@ argument_list|)
 decl_stmt|;
 comment|//  private final HConnection connection;
 specifier|private
-specifier|final
 name|HConnection
 name|connection
 decl_stmt|;
@@ -742,6 +733,24 @@ argument_list|,
 literal|10
 argument_list|)
 expr_stmt|;
+name|int
+name|tries
+init|=
+literal|0
+decl_stmt|;
+for|for
+control|(
+init|;
+name|tries
+operator|<
+name|numRetries
+condition|;
+operator|++
+name|tries
+control|)
+block|{
+try|try
+block|{
 name|this
 operator|.
 name|connection
@@ -749,6 +758,93 @@ operator|.
 name|getMaster
 argument_list|()
 expr_stmt|;
+break|break;
+block|}
+catch|catch
+parameter_list|(
+name|UndeclaredThrowableException
+name|ute
+parameter_list|)
+block|{
+name|HConnectionManager
+operator|.
+name|deleteStaleConnection
+argument_list|(
+name|this
+operator|.
+name|connection
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|connection
+operator|=
+name|HConnectionManager
+operator|.
+name|getConnection
+argument_list|(
+name|this
+operator|.
+name|conf
+argument_list|)
+expr_stmt|;
+block|}
+try|try
+block|{
+comment|// Sleep
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+name|getPauseTime
+argument_list|(
+name|tries
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|e
+parameter_list|)
+block|{
+name|Thread
+operator|.
+name|currentThread
+argument_list|()
+operator|.
+name|interrupt
+argument_list|()
+expr_stmt|;
+throw|throw
+operator|new
+name|MasterNotRunningException
+argument_list|(
+literal|"Interrupted"
+argument_list|)
+throw|;
+block|}
+block|}
+if|if
+condition|(
+name|tries
+operator|>=
+name|numRetries
+condition|)
+block|{
+throw|throw
+operator|new
+name|MasterNotRunningException
+argument_list|(
+literal|"Retried "
+operator|+
+name|numRetries
+operator|+
+literal|" times"
+argument_list|)
+throw|;
+block|}
 block|}
 comment|/**    * @return A new CatalogTracker instance; call {@link #cleanupCatalogTracker(CatalogTracker)}    * to cleanup the returned catalog tracker.    * @throws ZooKeeperConnectionException    * @throws IOException    * @see #cleanupCatalogTracker(CatalogTracker);    */
 specifier|private
