@@ -1046,6 +1046,28 @@ name|conf
 argument_list|)
 argument_list|,
 name|stopProxy
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Delete stale connection information for the instance specified by configuration.    * This will then close connection to    * the zookeeper ensemble and let go of all resources.    *    * @param conf    *          configuration whose identity is used to find {@link HConnection}    *          instance.    *          .    */
+specifier|public
+specifier|static
+name|void
+name|deleteStaleConnection
+parameter_list|(
+name|HConnection
+name|connection
+parameter_list|)
+block|{
+name|deleteConnection
+argument_list|(
+name|connection
+argument_list|,
+literal|true
+argument_list|,
+literal|true
 argument_list|)
 expr_stmt|;
 block|}
@@ -1100,6 +1122,8 @@ argument_list|(
 name|connectionKey
 argument_list|,
 name|stopProxy
+argument_list|,
+literal|false
 argument_list|)
 expr_stmt|;
 block|}
@@ -1120,6 +1144,9 @@ name|connection
 parameter_list|,
 name|boolean
 name|stopProxy
+parameter_list|,
+name|boolean
+name|staleConnection
 parameter_list|)
 block|{
 synchronized|synchronized
@@ -1161,6 +1188,8 @@ name|getKey
 argument_list|()
 argument_list|,
 name|stopProxy
+argument_list|,
+name|staleConnection
 argument_list|)
 expr_stmt|;
 break|break;
@@ -1178,6 +1207,9 @@ name|connectionKey
 parameter_list|,
 name|boolean
 name|stopProxy
+parameter_list|,
+name|boolean
+name|staleConnection
 parameter_list|)
 block|{
 synchronized|synchronized
@@ -1213,6 +1245,8 @@ name|connection
 operator|.
 name|isZeroReference
 argument_list|()
+operator|||
+name|staleConnection
 condition|)
 block|{
 name|HBASE_INSTANCES
@@ -8008,9 +8042,14 @@ name|HConnectionManager
 operator|.
 name|deleteConnection
 argument_list|(
+operator|(
+name|HConnection
+operator|)
 name|this
 argument_list|,
 name|stopProxy
+argument_list|,
+literal|false
 argument_list|)
 expr_stmt|;
 name|LOG
